--- a/Shop/App.xaml
+++ b/Shop/App.xaml
@@ -1,9 +1,9 @@
 ﻿<Application x:Class="Shop.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:Shop"
+             xmlns:common="clr-namespace:Shop.Main.Common"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <common:BoolToVisibilityConverter x:Key="BoolToVisibilityConverter"/>
     </Application.Resources>
 </Application>
