--- a/Shop/MainWindow.xaml
+++ b/Shop/MainWindow.xaml
@@ -1,12 +1,36 @@
 ﻿<Window x:Class="Shop.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Shop"
-        mc:Ignorable="d"
+        xmlns:common="clr-namespace:Shop.Main.Common"
         Title="MainWindow" Height="450" Width="800">
+    <Window.Resources>
+        <common:BoolToVisibilityConverter x:Key="BoolToVisibilityConverter"/>
+    </Window.Resources>
     <Grid>
-        <ListBox x:Name="ProductsList" DisplayMemberPath="Name" MouseDoubleClick="ProductsList_MouseDoubleClick"/>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+        <StackPanel Orientation="Horizontal" Grid.Row="0" Margin="10">
+            <Button Content="Koszyk"
+                    Margin="0,0,10,0"
+                    Padding="10,5"
+                    Command="{Binding OpenBasketCommand}"
+                    Visibility="{Binding IsBasketVisible, Converter={StaticResource BoolToVisibilityConverter}}"/>
+            <Button Content="Stwórz koszyk"
+                    Padding="10,5"
+                    Command="{Binding CreateBasketCommand}"
+                    Visibility="{Binding IsBasketNotVisible, Converter={StaticResource BoolToVisibilityConverter}}"/>
+        </StackPanel>
+        <TextBlock Grid.Row="1"
+                   Text="{Binding InfoMessage}"
+                   Foreground="Green"
+                   FontWeight="Bold"
+                   Margin="10,0,0,10"/>
+        <ListBox x:Name="ProductsList"
+                 Grid.Row="2"
+                 DisplayMemberPath="Name"
+                 MouseDoubleClick="ProductsList_MouseDoubleClick"/>
     </Grid>
 </Window>
