--- a/Shop/Product/View/ProductDetailsWindow.xaml
+++ b/Shop/Product/View/ProductDetailsWindow.xaml
@@ -1,13 +1,12 @@
 ﻿<Window x:Class="Shop.Product.View.ProductDetailsWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Shop.Product.View"
-        mc:Ignorable="d"
         Title="ProductDetailsWindow" Height="450" Width="800">
     <StackPanel Margin="20">
-        <TextBlock x:Name="NameText" FontWeight="Bold" FontSize="16"/>
-        <TextBlock x:Name="PriceText" Margin="0,10,0,0"/>
+        <TextBlock Text="{Binding Name}" FontWeight="Bold" FontSize="16"/>
+        <TextBlock Text="{Binding Price, StringFormat='Cena: {0:C}'}" Margin="0,10,0,0"/>
+        <Button Content="Dodaj do koszyka"
+                Margin="0,20,0,0"
+                Command="{Binding AddToBasketCommand}"/>
     </StackPanel>
 </Window>
