--- a/Shop/Basket/View/BasketWindow.xaml
+++ b/Shop/Basket/View/BasketWindow.xaml
@@ -17,5 +17,7 @@
             </ListView.View>
         </ListView>
         <TextBlock Text="{Binding TotalValue, StringFormat='Suma: {0:C}'}" FontWeight="Bold" Margin="0,10,0,0"/>
+        <Button Content="Powrót" Margin="0,20,0,0" Width="100" HorizontalAlignment="Right" Click="Close_Click"/>
+
     </StackPanel>
 </Window>
