--- a/Shop/Basket/View/BasketWindow.xaml
+++ b/Shop/Basket/View/BasketWindow.xaml
@@ -13,6 +13,15 @@
                 <GridView>
                     <GridViewColumn Header="Nazwa" DisplayMemberBinding="{Binding Name}" Width="200"/>
                     <GridViewColumn Header="Cena" DisplayMemberBinding="{Binding Price}" Width="100"/>
+                    <GridViewColumn Header="Usuń" Width="80">
+                        <GridViewColumn.CellTemplate>
+                            <DataTemplate>
+                                <Button Content="Usuń"
+                                Command="{Binding DataContext.RemoveItemCommand, RelativeSource={RelativeSource AncestorType=Window}}"
+                                CommandParameter="{Binding}" />
+                            </DataTemplate>
+                        </GridViewColumn.CellTemplate>
+                    </GridViewColumn>
                 </GridView>
             </ListView.View>
         </ListView>
